syntax = "proto3";

package pgraph.model;

import "common/enums.proto";
import "field/field_value.proto";

option java_package = "planka.graph.driver.proto.model";
option java_multiple_files = true;

// 卡片间的关联关系
message Link {

  uint64 id = 1;  // 关联ID，使用u64类型

  // 关联关系定义id
  string ltId = 2;

  // 源节点卡片id
  uint64 srcId = 3;

  // 目标节点卡片id
  uint64 destId = 4;

  // 关联关系上的属性：衍生属性
  repeated pgraph.field.FieldValueOnLink field_values = 5;
}

// 卡片间的关联关系单元
message LinkKey {

  // 关联关系定义id
  string ltId = 2;

  // 源节点卡片id
  uint64 srcId = 3;

  // 目标节点卡片id
  uint64 destId = 4;
}